<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
    <modelVersion>4.0.0</modelVersion>

    <groupId>own</groupId>
    <artifactId>selenium-junit-cucumber-fw</artifactId>
    <version>1.0-SNAPSHOT</version>

	<properties>
        <java.version>1.7</java.version>
        <junit.version>4.12</junit.version>
        <cucumber.version>1.2.2</cucumber.version>
        <maven.compiler.version>3.3</maven.compiler.version>
        <maven.surefire.version>2.18.1</maven.surefire.version>
        <webdriverextensions.version>1.7.0</webdriverextensions.version>
        <selenium.version>2.48.2</selenium.version>
        <environment>test1</environment>
        <!--<environment>ci1</environment>-->
        <!--<environment>test1ByIp</environment>-->
        <!--<environment>ci1ByIp</environment>-->
        <!--<browser>TSMGridFromTSM</browser>-->
        <!--<browser>TSMGridFromEpam</browser>-->
        <!--<browser>TSMGridFromEpamFirefox</browser>-->
        <!--<browser>TSMGridFromTSMFirefox</browser>-->
        <!--<browser>TSMGridFromEpamIE11</browser>-->
        <!--<browser>TSMGridFromTSMIE11</browser>-->
        <browser>Chrome</browser>
        <!--<browser>Firefox</browser>-->
    </properties>

	
    <dependencies>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
        </dependency>

        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.webdriverextensions</groupId>
            <artifactId>webdriverextensions</artifactId>
            <version>${webdriverextensions.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgument>-Werror</compilerArgument>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <executions>
                    <execution>
                        <id>default-test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                        <configuration>
                            <reportsDirectory>reports</reportsDirectory>
                            <forkCount>2</forkCount>
                            <reuseForks>false</reuseForks>
                            <argLine>-Duser.language=en</argLine>
                            <argLine>-Xmx1024m</argLine>
                            <argLine>-XX:MaxPermSize=256m</argLine>
                            <argLine>-Dfile.encoding=UTF-8</argLine>
                            <useFile>false</useFile>
                            <includes>
                                <include>**/Run*.java</include>
                            </includes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/test/resources/properties</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>
